<resources>
    <string name="app_name">botflow</string>
    <integer name="com_vk_sdk_AppId">7632134</integer>
    <string name="bot_list">Bots</string>
    <string name="account">Account</string>
    <string name="tariff">Plan</string>
    <string name="email">Email</string>
    <string name="vk_auth">Войти с VK</string>
    <string name="google_auth">Войти с Google</string>
    <string name="auth">Войдите, чтобы продолжить</string>
    <string name="bot_name">Enter bot name</string>
    <string name="general">General</string>
    <string name="intents">Intents</string>
    <string name="entities">Entities</string>
    <string name="integrations">Integrations</string>
    <string name="save">Save</string>
</resources>